src/test/run-pass/issue_3136_b.rs
// xfail-fast - check-fast doesn't understand aux-build
// aux-build:issue_3136_a.rc

extern mod issue_3136_a;
fn main() {}

