src/test/compile-fail/use-meta-mismatch.rs
// error-pattern:can't find crate for `std`

extern mod std(complex(meta(item)));

fn main() { }
